# SECdb

./: .gitignore  .python-version  .python-version.bak  .style.yapf  all_bal_sht_msft.sql  edgar_scraper.py  hello.py  income_statement_req.sql  pyproject.toml  pyproject.toml.bak  quick_ruff_notes.md  ref_table.sql  requirements.txt.bak  sec_scraper userparams.py  sec_scraper.py  test_sec_edgar.ipynb
