[tool.poetry]
name = "secdb"
version = "0"
description = "SECdb"
authors = ["eo1989 <eorlowski6@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.5"
requests = ">=2.28.2"
requests-random-user-agent = ">=2023.1.13"
pandas = ">=2.0"
beautifulsoup4 = ">=4.11.1"

[tool.poetry.group.dev.dependencies]
# flake8 = "^5.0.0"
# pyflakes = "^2.5.0"
ruff = ">=0.0.290"
yapf = ">=0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
