[project]
name = "secdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = []

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.1",
    "hypothesis>=6.125.1",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "requests-random-user-agent>=2023.10.25",
    "ruff>=0.9.4",
    "yapf>=0.43.0",
]
